Update kafka-server-start.sh